# bridge-indexer

./: .gitmodules  Cargo.toml  README.md
.sh/mainnet/: bridge-indexer  consumer.run.sh
.sh/testnet/: consumer.run.sh
bridge-indexer/: Cargo.toml
bridge-indexer/src/: configs.rs  main.rs
